--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "main.js",
 	"scripts": {
 		"start": "node index.js",
-		"dev": "nodemon --ext js,html"
+		"dev": "nodemon --ext js,html,css"
 	},
 	"repository": {
 		"type": "git",
